--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "deploy": "vue-tsc -b && vite build && gh-pages -d dist"
   },
   "dependencies": {
     "fs": "^0.0.1-security",
@@ -26,6 +27,7 @@
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.3.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
     "tailwindcss": "^4.1.11",
