--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write",
-    "deploy": "vue-tsc -b && vite build && gh-pages -d dist"
+    "lint": "eslint .",
+    "format": "eslint --fix . && prettier --write ."
   },
   "dependencies": {
     "fs": "^0.0.1-security",
@@ -19,6 +18,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-vue": "^6.0.0",
@@ -28,12 +28,13 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.3.0",
     "gh-pages": "^6.3.0",
+    "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.41.0",
     "vite": "^7.0.4",
-    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.12"
   }
 }
